# hyprmouselock

./: CMakeLists.txt  LICENSE  Makefile  README.md  hyprpm.toml  main.cpp  meson.build
